--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">My Yoga Songs</string>
 
-    <string name="dummy_button">START LISTENING</string>
-    <string name="dummy_content">My Yoga\nSongs</string>
+    <string name="app_start_button">START LISTENING</string>
+    <string name="title_content">My Yoga\nSongs</string>
     <string name="title_activity_main">Yoga &amp; Meditation songs</string>
     <string name="title_activity_player">PlayerActivity</string>
 </resources>
